--- a/balloon-burst/Resources/Info.plist
+++ b/balloon-burst/Resources/Info.plist
@@ -35,6 +35,8 @@
 		<key>opengles-1</key>
 		<true/>
 	</dict>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 </dict>
